# Obsidian-paper-assistant

./: .gitignore  LICENSE  README.md  README.zh-CN.md  SKILL.md  overview.md  pyproject.toml  requirements.txt  test_changes.py
.claude/skills/: paper.md
.github/workflows/: ci.yml
.kimi/skills/paper-assistant/: SKILL.md
.workbuddy/memory/: 2026-06-11.md  MEMORY.md
assets/: paper-note.md
output/Attention is all you need/: Attention is all you need.json
output/DUET/: DUET.analysis.json  DUET.json
output/ERAN/: ERAN.json
output_test/: 2026 TiMi.md  2026 TiMi_final.md  2026 TiMi_final2.md  2026 TiMi_final3.md  2026 TiMi_final_v3.md  2026 TiMi_final_v4.md  2026 TiMi_fixed.md  2026 TiMi_v2.md  2026 TiMi_v3.md  2026 TiMi_v4.md  TiMi_final_v3.md  TiMi_with_images.md  TiMi_with_images2.md
output_test/LeMoLE/: LeMoLE.json
output_test/comparison/: 2026 TiMi.md
output_test/comparison2/: 2026 TiMi.md
output_test/reparse/TiMi/: TiMi.analysis.json  TiMi.json
references/: style-guide.md
scripts/: __init__.py  extract_figures_v2.py  fetch_arxiv.py  fix_json.py  llm_analyzer.py  obsidian_writer.py  paper_pipeline.py  pdf_parser.py  process_paper.py
templates/: paper-note.md
tests/: test_llm_analyzer.py  test_obsidian_writer.py  test_pdf_parser.py
tools/: fetch_arxiv.py  llm_analyzer.py  obsidian_writer.py  paper_pipeline.py  pdf_parser.py  process_paper.py
