[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-assistant"
version = "1.0.0"
description = "Process academic PDFs into structured Markdown reading notes"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Paper Assistant User"},
]
keywords = ["pdf", "arxiv", "academic", "markdown", "notes", "obsidian"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pymupdf>=1.23.0",
    "pdf2image>=1.17.0",
    "Pillow>=10.0.0",
    "certifi>=2024.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "mypy",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/yourusername/paper-assistant"
Repository = "https://github.com/yourusername/paper-assistant"
